// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ToolErrorBlock renders a tool error with the error header 1`] = `
"<div>
  <div data-testid="tool-error" class="relative border border-red/30 bg-red/10">
    <span class="absolute w-2.5 h-2.5 -top-px -left-px border-t-2 border-l-2 border-red">
    </span>
    <span class="absolute w-2.5 h-2.5 -bottom-px -right-px border-b-2 border-r-2 border-red">
    </span>
    <div class="flex select-none items-center gap-2 px-4 py-3 font-mono text-xs uppercase tracking-widest text-red">
      <span>
        ◆
      </span>
      <span>
        Tool error
      </span>
    </div>
    <pre class="whitespace-pre-wrap wrap-break-word px-4 pb-3 pt-1 font-mono text-xs text-ink">
      File not found: /projects/app/NOTES
Did you mean one of these?
- notes.txt
    </pre>
  </div>
</div>"
`;

exports[`ToolErrorBlock renders a crash with the crashed header 1`] = `
"<div>
  <div data-testid="tool-error" class="relative border border-red/30 bg-red/10">
    <span class="absolute w-2.5 h-2.5 -top-px -left-px border-t-2 border-l-2 border-red">
    </span>
    <span class="absolute w-2.5 h-2.5 -bottom-px -right-px border-b-2 border-r-2 border-red">
    </span>
    <div class="flex select-none items-center gap-2 px-4 py-3 font-mono text-xs uppercase tracking-widest text-red">
      <span>
        ◆
      </span>
      <span>
        Tool crashed
      </span>
    </div>
    <pre class="whitespace-pre-wrap wrap-break-word px-4 pb-3 pt-1 font-mono text-xs text-ink">
      they played us like a damn fiddle!
    </pre>
  </div>
</div>"
`;
